# ai-stack

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
action_server/: deploy_local.py
action_server/templates/: litellm_config.yaml  litellm_docker_compose.yml  mattermost.env  mattermost_config.json  mattermost_docker_compose.yml  neo4j_docker_compose.yml  rabbitmq_docker_compose.yml
agent-agent/: README.md  pyproject.toml
human-agent/: README.md  pyproject.toml
knowledge-base/: README.md  pyproject.toml
learning-reasoning/: README.md  pyproject.toml
src/action/agent_agent/: agent_agent.py
src/action/comm/: __init__.py  comm.py  comm_consumer.py  comm_topic.py
src/action/human_agent/: human_agent.py
src/action/knowledge_base/: __init__.py  n4j.py
src/action/llm/: __init__.py  lite.py  mgr.py  oai.py
src/action/slacky/: __init__.py  mattermost.py  test.py
strategy-planning/: README.md  pyproject.toml
