[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "action"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Giovanni Vigna", email = "vigna@ucsb.edu" },
    { name = "Gabriel Pizarro", email = "gpizarro@ucsb.edu" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["kombu ~= 5.0", "neo4j ~= 5.0", "openai ~= 1.54", "mattermostdriver ~= 7.3", "litellm ~= 1.55"]

[project.urls]
Homepage = "https://github.com/action-ai-institute/ai-stack"
Issues = "https://github.com/action-ai-institute/ai-stack/issues"

[tool.hatch.envs.default]
