[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "action-human-agent"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Giovanni Vigna", email = "vigna@ucsb.edu" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/action-ai-institute/ai-stack"
Issues = "https://github.com/action-ai-institute/ai-stack/issues"

[tool.hatch.envs.default]
